// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComlinkStub API bindings get stub method getEnums should get the appropriate path 1`] = `
Array [
  "http://localhost:3000/enums",
  Object {
    "decompress": true,
    "method": "GET",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings it should disable asking for compressed responses if specified it should disable compression for GET methods 1`] = `
Array [
  "http://localhost:3000/enums",
  Object {
    "decompress": false,
    "method": "GET",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings it should disable asking for compressed responses if specified it should disable compression for POST methods 1`] = `
Array [
  "http://localhost:3000/metadata",
  Object {
    "decompress": false,
    "headers": Object {},
    "json": undefined,
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getGameData should create the payload, and send it 1`] = `
Array [
  "http://localhost:3000/data",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=43cac83fc28147d8102aaf7c3115ce7570154586baea26786f1b10bf11686794",
      "X-Date": "1660422866714",
    },
    "json": Object {
      "payload": Object {
        "includePveUnits": "false",
        "requestSegment": 2,
        "version": "versionString",
      },
    },
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getGuild should create the payload, and send it 1`] = `
Array [
  "http://localhost:3000/guild",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=47f4725e8e703e88e94336472a7aa0d9fb1863ab52c93792b20b325417790955",
      "X-Date": "1660422866714",
    },
    "json": Object {
      "payload": Object {
        "guildId": "idString",
      },
    },
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getGuildsByName should create the payload, and send it 1`] = `
Array [
  "http://localhost:3000/getGuilds",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=e55f39abd6958650e56c3f0c1c9aab8179abf8bb30091a2848010d8bd8ef0069",
      "X-Date": "1660422866714",
    },
    "json": Object {
      "payload": Object {
        "count": 5,
        "name": "name",
        "startIndex": 1,
      },
    },
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getLocalizationBundle should create the payload, and send it 1`] = `
Array [
  "http://localhost:3000/localization",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=efb1ec3382f33032741c45b64b1c70aec877ce55645713c7ecc1a7fe95a393a6",
      "X-Date": "1660422866714",
    },
    "json": Object {
      "payload": Object {
        "id": "idString",
      },
      "unzip": false,
    },
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getLocalizationBundle should create the payload, and send it 2`] = `
Array [
  "http://localhost:3000/localization",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=ff30d647181844239077da3d244e70cb246b59158ed048da9e0993137f53cff9",
      "X-Date": "1660422866714",
    },
    "json": Object {
      "payload": Object {
        "id": "idString",
      },
      "unzip": true,
    },
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getMetaData should create the payload, and send it 1`] = `
Array [
  "http://localhost:3000/metadata",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=c06d27fe2ec2a682cc79864b61df8cb4372a6df21b3e716ead52f2958d166e53",
      "X-Date": "1660422866714",
    },
    "json": undefined,
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getPlayer should create the payload, and send it 1`] = `
Array [
  "http://localhost:3000/player",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=86b6f2bea2c84f0b593d961bfe3571ea05ab8913283d0d5702c9fe093c5e57cb",
      "X-Date": "1660422866714",
    },
    "json": Object {
      "payload": Object {
        "allyCode": "123456789",
      },
    },
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getPlayer should create the payload, and send it 2`] = `
Array [
  "http://localhost:3000/player",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=9a02a4d5304cf6a70fdcb34515252574ca66cd3ad04d77d23243b94abf141882",
      "X-Date": "1660422866714",
    },
    "json": Object {
      "payload": Object {
        "playerId": "aPlayerId",
      },
    },
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getPlayerArenaProfile should create the payload, and send it 1`] = `
Array [
  "http://localhost:3000/playerArena",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=a14f7fca084d12566fee1c3ed2116f4dc2ee0bdb0f504f428dfc6987db6b321a",
      "X-Date": "1660422866714",
    },
    "json": Object {
      "payload": Object {
        "allyCode": "123456789",
        "playerDetailsOnly": false,
      },
    },
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`ComlinkStub API bindings post stub method getPlayerArenaProfile should create the payload, and send it 2`] = `
Array [
  "http://localhost:3000/playerArena",
  Object {
    "decompress": true,
    "headers": Object {
      "Authorization": "HMAC-SHA256 Credential=my-access-key,Signature=514068104798219277bb6c26df9faafa2bd3a68027fa2dd6a4ef72bcf262a1ba",
      "X-Date": "1660422866714",
    },
    "json": Object {
      "payload": Object {
        "playerDetailsOnly": true,
        "playerId": "aPlayerId",
      },
    },
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`swgoh-stats binding it should call the stats API 1`] = `
Array [
  "abc://xyz:42/api",
  Object {
    "decompress": true,
    "json": Array [
      Object {
        "foo": "bar",
      },
    ],
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`swgoh-stats binding it should handle flags 1`] = `
Array [
  "abc://xyz:42/api?flags=calcGP,gameStyle",
  Object {
    "decompress": true,
    "json": Array [
      Object {
        "foo": "bar",
      },
    ],
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`swgoh-stats binding it should handle flags and languages 1`] = `
Array [
  "abc://xyz:42/api?flags=onlyGP&language=eng_us",
  Object {
    "decompress": true,
    "json": Array [
      Object {
        "foo": "bar",
      },
    ],
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;

exports[`swgoh-stats binding it should handle languages 1`] = `
Array [
  "abc://xyz:42/api?language=eng_us",
  Object {
    "decompress": true,
    "json": Array [
      Object {
        "foo": "bar",
      },
    ],
    "method": "POST",
    "resolveBodyOnly": true,
    "responseType": "json",
  },
]
`;
